<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/list_participants_layout_padding">

        <TextView
            android:id="@+id/list_participants_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/list_participants_last_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/list_participant_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/list_participants_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false" android:orientation="horizontal"
        android:padding="@dimen/list_participants_layout_padding">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:paddingEnd="10dp" android:paddingRight="10dp"
                android:text="@string/list_participants_date_of_birth" />

            <TextView
                android:id="@+id/list_participants_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/list_participants_date"/>
        </LinearLayout>

       <LinearLayout
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
               android:paddingEnd="10dp" android:paddingRight="10dp"
               android:text="@string/list_participants_gender_string"/>
           <TextView
               android:id="@+id/list_participants_gender"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
               android:text="@string/list_participants_gender"
               />
       </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/list_participants_layout_padding">

        <TextView
            android:id="@+id/list_participants_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/list_participants_country"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <TextView
            android:id="@+id/list_participant_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/list_participants_city"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/list_participants_layout_padding">

        <TextView
            android:id="@+id/list_participants_club"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/list_participants_club"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <TextView
            android:id="@+id/list_participant_bow_class"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/list_participants_bow_class"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
    </LinearLayout>

</LinearLayout>



