<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_participant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_button_participants" />

        <Button
            android:id="@+id/btn_stage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_button_stage" />

        <Button
            android:id="@+id/btn_bow_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_button_bow_class" />
    </LinearLayout>

</RelativeLayout>